--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "dev" : "node src/index.js",
+    "build": "npm install"
+    
   },
   "keywords": [],
   "author": "",
